--- a/ESDWiki2/ClientApp/src/app/navbar/top-navbar.styles.css
+++ b/ESDWiki2/ClientApp/src/app/navbar/top-navbar.styles.css
@@ -8,7 +8,7 @@
   font-weight: 600;
   color: white;
   font-size: 15px;
-  padding-top: 13px;
+  padding-top: 15px;
   border-bottom: 2px solid transparent;
 }
 
@@ -28,7 +28,6 @@
 
 .navbar {
     background-color: #42afff !important;
-    height: 50px;
 }
 
 .container-fluid{
